welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value position
			position = position
                        ^indexOfMaxValue:9: error: not found: value position
		else {position = position + 1}
                      ^indexOfMaxValue:11: error: not found: value position
	return position
               ^